# goit-python-web-hw8

./: README.md  config.ini  connect.py  models.py  pyproject.toml  queries.py  requirements.txt  seeds.py
task_1/: models.py  pyproject.toml  queries.py  seeds.py  start-redis.bat  start-redis.sh
task_2/: consumer.py  consumer_email.py  consumer_sms.py  models.py  producer.py  pyproject.toml  start-rabbitmq.bat  start-rabbitmq.sh
