[tool.poetry]
name = "goit-python-web-hw8"
version = "1.0.0"
description = "Models for data storage."
authors = ["Alex Khreptak <alex.nuclearboy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.6.2"}
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
