[tool.poetry]
name = "goit-python-web-hw8-2"
version = "0.1.0"
description = ""
authors = ["Alex Khreptak <alex.nuclearboy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.6.2"}
mongoengine = "^0.28.2"
pika = "^1.3.2"
faker = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
